  * Dicts:
    - New function xbt_dict_new_homogeneous(void(*)(void*)) to
      create homogeneous dictionaries, where all the elements share the
      same free function. Non homogeneous dictionaries will be
      deprecated in the next release.
    - Dicts of scalar elements (xbt_dicti_*) are deprecated.
    - Multi-level dictionaries are deprecated.
  * mmalloc module:
    - Cleanups and simplifications to make it maintainable again.
    - Exotic features (such as memalign and valloc) were removed.
    - The metadata were extended and improved so that the
      model-checker becomes able to explore and inspect the heaps.
    - This may induce a performance drop when enable_model-checking is
      ON in cmake (even if it's not used in the simulation), but it is
      necessary at this point to get MC working.

      Turn model-checking OFF if simulation performance matters to you.

  -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.6.2) stable; urgency=low

 The "Not coding new stuff allows to polish old things" release.

 General
 * New bindings to the NS3 packet level simulator (experimental)
 * Use the raw (efficient) execution contexts instead of the sysv
   (portable) ones when possible.
 * libpcre is now mandatory in any cases since not using it led to
    severe performance loss and possibly other issues
 * Update the XML platforms:
   - G5K: include the latest machine in Nancy
   - GridPP and LCG: new platforms
 * Documentation was partially updated, at least (more to come)

 Bug fixes, cosmetics and small improvements
 * Free terminated processes before the end of the simulation to avoid
   exhausting the memory of users having very dynamic amount of
   processes.
 * Bug fix and cosmetics about canceling non-running tasks
 * Bug fix about the dot loader's issues when using libcgraph

 Portability
 * Create an installer for windows with nsis (amd64 and win32)
   - Add an hello world project to illustrate simgrid project creation.